src/jsc/bindings/libuv/uv.h

typedef enum {
#define XX(code, _) UV_##code = UV__##code,
    UV_ERRNO_MAP(XX)
#undef XX
        UV_ERRNO_MAX
    = UV__EOF - 1
} uv_errno_t;