src/napi/node_api.h

struct uv_loop_s; // Forward declaration.
// Methods to provide node::Buffer functionality with napi types
NAPI_EXTERN napi_status napi_create_buffer(napi_env env, size_t length,
                                           void **data, napi_value *result);
NAPI_EXTERN napi_status napi_create_external_buffer(napi_env env, size_t length,
                                                    void *data,
                                                    napi_finalize finalize_cb,
                                                    void *finalize_hint,
                                                    napi_value *result);
NAPI_EXTERN napi_status napi_create_buffer_copy(napi_env env, size_t length,
                                                const void *data,
                                                void **result_data,
                                                napi_value *result);
NAPI_EXTERN napi_status napi_is_buffer(napi_env env, napi_value value,
                                       bool *result);
NAPI_EXTERN napi_status napi_get_buffer_info(napi_env env, napi_value value,
                                             void **data, size_t *length);
// Methods to manage simple async operations
NAPI_EXTERN
napi_status napi_create_async_work(napi_env env, napi_value async_resource,
                                   napi_value async_resource_name,
                                   napi_async_execute_callback execute,
                                   napi_async_complete_callback complete,
                                   void *data, napi_async_work *result);
NAPI_EXTERN napi_status napi_delete_async_work(napi_env env,
                                               napi_async_work work);
NAPI_EXTERN napi_status napi_queue_async_work(napi_env env,
                                              napi_async_work work);
NAPI_EXTERN napi_status napi_cancel_async_work(napi_env env,
                                               napi_async_work work);
// version management
NAPI_EXTERN
napi_status napi_get_node_version(napi_env env,
                                  const napi_node_version **version);
// Return the current libuv event loop for a given environment
NAPI_EXTERN napi_status napi_get_uv_event_loop(napi_env env,
                                               struct uv_loop_s **loop);
NAPI_EXTERN napi_status napi_fatal_exception(napi_env env, napi_value err);
NAPI_EXTERN napi_status napi_add_env_cleanup_hook(napi_env env,
                                                  void (*fun)(void *arg),
                                                  void *arg);
NAPI_EXTERN napi_status napi_remove_env_cleanup_hook(napi_env env,
                                                     void (*fun)(void *arg),
                                                     void *arg);
NAPI_EXTERN napi_status
napi_unref_threadsafe_function(napi_env env, napi_threadsafe_function func);
NAPI_EXTERN napi_status
napi_ref_threadsafe_function(napi_env env, napi_threadsafe_function func);
NAPI_EXTERN napi_status napi_add_async_cleanup_hook(
    napi_env env, napi_async_cleanup_hook hook, void *arg,
    napi_async_cleanup_hook_handle *remove_handle);
NAPI_EXTERN napi_status
napi_remove_async_cleanup_hook(napi_async_cleanup_hook_handle remove_handle);