src/napi/lib.rs


unsafe extern "C" {
    pub fn napi_create_buffer(env: napi_env, length: usize, data: *mut *mut c_void, result: *mut napi_value) -> napi_status;
    pub fn napi_create_external_buffer(env: napi_env, length: usize, data: *mut c_void, finalize_cb: napi_finalize, finalize_hint: *mut c_void, result: *mut napi_value) -> napi_status;
}

#[unsafe(no_mangle)]
pub extern "C" fn napi_create_buffer_copy(
    env_: napi_env,
    length: usize,
    data: *const u8,
    result_data: *mut *mut c_void,
    result_: *mut napi_value,
) -> napi_status {
    bun_output::scoped_log!(napi, "napi_create_buffer_copy: {}", length);
    let env = get_env!(env_);
    let result = get_out!(env, result_);
    let buffer = match JSValue::create_buffer_from_length(env.to_js(), length) {
        Ok(b) => b,
        Err(_) => return NapiEnv::set_last_error(Some(env), NapiStatus::pending_exception),
    };
    if let Some(array_buf) = buffer.as_array_buffer(env.to_js()) {
        if length > 0 {
            // SAFETY: caller guarantees `data` points to at least `length` bytes.
            let src = unsafe { core::slice::from_raw_parts(data, length) };
            array_buf.slice_mut()[..length].copy_from_slice(src);
        }
        if let Some(ptr_out) = unsafe { result_data.as_mut() } {
            *ptr_out = if length > 0 {
                array_buf.ptr as *mut c_void
            } else {
                ptr::null_mut()
            };
        }
    }

    result.set(env, buffer);

    env.ok()
}

unsafe extern "C" {
    fn napi_is_buffer(env: napi_env, value: napi_value, result: *mut bool) -> napi_status;
}

#[unsafe(no_mangle)]
pub extern "C" fn napi_get_buffer_info(
    env_: napi_env,
    value_: napi_value,
    data: *mut *mut u8,
    length: *mut usize,
) -> napi_status {
    bun_output::scoped_log!(napi, "napi_get_buffer_info");
    let env = get_env!(env_);
    let value = value_.get();
    let Some(array_buf) = value.as_array_buffer(env.to_js()) else {
        return NapiEnv::set_last_error(Some(env), NapiStatus::invalid_arg);
    };

    if let Some(dat) = unsafe { data.as_mut() } {
        *dat = array_buf.ptr;
    }

    if let Some(len) = unsafe { length.as_mut() } {
        *len = array_buf.byte_len;
    }

    env.ok()
}

unsafe extern "C" {
    fn node_api_create_syntax_error(env: napi_env, code: napi_value, msg: napi_value, result: *mut napi_value) -> napi_status;
    fn node_api_symbol_for(env: napi_env, utf8: *const c_char, length: usize, result: *mut napi_value) -> napi_status;
    fn node_api_throw_syntax_error(env: napi_env, code: *const c_char, msg: *const c_char) -> napi_status;
    fn node_api_create_external_string_latin1(env: napi_env, str_: *mut u8, length: usize, finalize_cb: napi_finalize, finalize_hint: *mut c_void, result: *mut JSValue, copied: *mut bool) -> napi_status;
    fn node_api_create_external_string_utf16(env: napi_env, str_: *mut u16, length: usize, finalize_cb: napi_finalize, finalize_hint: *mut c_void, result: *mut JSValue, copied: *mut bool) -> napi_status;
}

#[unsafe(no_mangle)]
pub extern "C" fn napi_create_async_work(
    env_: napi_env,
    _async_resource: napi_value,
    _async_resource_name: *const c_char,
    execute_: Option<napi_async_execute_callback>,
    complete: Option<napi_async_complete_callback>,
    data: *mut c_void,
    result_: *mut *mut napi_async_work,
) -> napi_status {
    bun_output::scoped_log!(napi, "napi_create_async_work");
    let env = get_env!(env_);
    let result = get_out!(env, result_);
    // https://github.com/nodejs/node/blob/a2de5b9150da60c77144bb5333371eaca3fab936/src/node_api.cc#L1245
    let Some(execute) = execute_ else {
        return env.invalid_arg();
    };
    *result = napi_async_work::new(env, execute, complete, data);
    env.ok()
}

#[unsafe(no_mangle)]
pub extern "C" fn napi_delete_async_work(env_: napi_env, work_: *mut napi_async_work) -> napi_status {
    bun_output::scoped_log!(napi, "napi_delete_async_work");
    let env = get_env!(env_);
    let Some(work) = (unsafe { work_.as_mut() }) else {
        return env.invalid_arg();
    };
    if cfg!(debug_assertions) {
        debug_assert!(core::ptr::eq(env.to_js(), work.global));
    }
    napi_async_work::destroy(work_);
    env.ok()
}

#[unsafe(no_mangle)]
pub extern "C" fn napi_queue_async_work(env_: napi_env, work_: *mut napi_async_work) -> napi_status {
    bun_output::scoped_log!(napi, "napi_queue_async_work");
    let env = get_env!(env_);
    let Some(work) = (unsafe { work_.as_mut() }) else {
        return env.invalid_arg();
    };
    if cfg!(debug_assertions) {
        debug_assert!(core::ptr::eq(env.to_js(), work.global));
    }
    work.schedule();
    env.ok()
}

#[unsafe(no_mangle)]
pub extern "C" fn napi_cancel_async_work(env_: napi_env, work_: *mut napi_async_work) -> napi_status {
    bun_output::scoped_log!(napi, "napi_cancel_async_work");
    let env = get_env!(env_);
    let Some(work) = (unsafe { work_.as_mut() }) else {
        return env.invalid_arg();
    };
    if cfg!(debug_assertions) {
        debug_assert!(core::ptr::eq(env.to_js(), work.global));
    }
    if work.cancel() {
        return env.ok();
    }

    env.generic_failure()
}

#[unsafe(no_mangle)]
pub extern "C" fn napi_get_node_version(
    env_: napi_env,
    version_: *mut *const napi_node_version,
) -> napi_status {
    bun_output::scoped_log!(napi, "napi_get_node_version");
    let env = get_env!(env_);
    let version = get_out!(env, version_);
    *version = &NAPI_NODE_VERSION_GLOBAL;
    env.ok()
}

#[cfg(windows)]
type napi_event_loop = *mut bun_sys::windows::libuv::Loop;
#[cfg(not(windows))]
type napi_event_loop = *mut EventLoop;

#[unsafe(no_mangle)]
pub extern "C" fn napi_get_uv_event_loop(env_: napi_env, loop_: *mut napi_event_loop) -> napi_status {
    bun_output::scoped_log!(napi, "napi_get_uv_event_loop");
    let env = get_env!(env_);
    let loop_out = get_out!(env, loop_);
    #[cfg(windows)]
    {
        // alignment error is incorrect.
        // TODO(@190n) investigate
        // SAFETY: see Zig — @setRuntimeSafety(false) was used here.
        *loop_out = VirtualMachine::get().uv_loop();
    }
    #[cfg(not(windows))]
    {
        // there is no uv event loop on posix, we use our event loop handle.
        *loop_out = env.to_js().bun_vm().event_loop() as *const _ as *mut _;
    }
    env.ok()
}

unsafe extern "C" {
    pub fn napi_fatal_exception(env: napi_env, err: napi_value) -> napi_status;
    pub fn napi_add_async_cleanup_hook(env: napi_env, function: napi_async_cleanup_hook, data: *mut c_void, handle_out: *mut napi_async_cleanup_hook_handle) -> napi_status;
    pub fn napi_add_env_cleanup_hook(env: napi_env, function: Option<extern "C" fn(*mut c_void)>, data: *mut c_void) -> napi_status;
    pub fn napi_create_typedarray(env: napi_env, type_: napi_typedarray_type, length: usize, arraybuffer: napi_value, byte_offset: usize, result: *mut napi_value) -> napi_status;
    pub fn napi_remove_async_cleanup_hook(handle: napi_async_cleanup_hook_handle) -> napi_status;
    pub fn napi_remove_env_cleanup_hook(env: napi_env, function: Option<extern "C" fn(*mut c_void)>, data: *mut c_void) -> napi_status;

    fn napi_internal_cleanup_env_cpp(env: napi_env);
    fn napi_internal_check_gc(env: napi_env);
}

extern "C" fn napi_internal_register_cleanup_callback(data: *mut c_void) {
    // SAFETY: data is the napi_env we registered below.
    unsafe { napi_internal_cleanup_env_cpp(data as napi_env) };
}

#[unsafe(no_mangle)]
pub extern "C" fn napi_internal_register_cleanup_zig(env_: napi_env) {
    // SAFETY: caller guarantees env_ is non-null (Zig used `.?`).
    let env = unsafe { &*env_ };
    env.to_js().bun_vm().rare_data().push_cleanup_hook(
        env.to_js(),
        env_ as *mut c_void,
        napi_internal_register_cleanup_callback,
    );
}

#[unsafe(no_mangle)]
pub extern "C" fn napi_internal_suppress_crash_on_abort_if_desired() {
    if bun_core::feature_flag::BUN_INTERNAL_SUPPRESS_CRASH_ON_NAPI_ABORT.get() {
        bun_crash_handler::suppress_reporting();
    }
}

unsafe extern "C" {
    fn napi_internal_remove_finalizer(env: napi_env, fun: napi_finalize, hint: *mut c_void, data: *mut c_void);
}

// ──────────────────────────────────────────────────────────────────────────
// Finalizer
// ──────────────────────────────────────────────────────────────────────────

pub struct Finalizer {
    pub env: NapiEnvRef,
    pub fun: NapiFinalizeFunction,
    pub data: *mut c_void,
    pub hint: *mut c_void,
}

impl Finalizer {
    pub fn run(&mut self) {
        let env = self.env.get();
        // SAFETY: env is valid for the duration of this call.
        let env_ref = unsafe { &*env };
        let handle_scope = NapiHandleScope::open(env_ref, false);
        let _hs_guard = scopeguard::guard((), |_| {
            if !handle_scope.is_null() {
                NapiHandleScope::close(handle_scope, env_ref);
            }
        });

        (self.fun)(env, self.data, self.hint);
        // SAFETY: env is valid; passes the C finalizer back for bookkeeping.
        unsafe { napi_internal_remove_finalizer(env, Some(self.fun), self.hint, self.data) };

        if let Some(exception) = env_ref.to_js().try_take_exception() {
            let _ = env_ref
                .to_js()
                .bun_vm()
                .uncaught_exception(env_ref.to_js(), exception, false);
        }

        if let Some(exception) = env_ref.get_and_clear_pending_exception() {
            let _ = env_ref
                .to_js()
                .bun_vm()
                .uncaught_exception(env_ref.to_js(), exception, false);
        }
    }

    // `deinit` is handled by Drop on NapiEnvRef.

    /// Takes ownership of `this`.
    pub fn enqueue(self) {
        NapiFinalizerTask::init(self).schedule();
    }
}

/// For Node-API modules not built with NAPI_EXPERIMENTAL, finalizers should be deferred to the
/// immediate task queue instead of run immediately. This lets finalizers perform allocations,
/// which they couldn't if they ran immediately while the garbage collector is still running.
#[unsafe(no_mangle)]
pub extern "C" fn napi_internal_enqueue_finalizer(
    env: napi_env,
    fun: napi_finalize,
    data: *mut c_void,
    hint: *mut c_void,
) {
    let Some(fun) = fun else { return };
    // SAFETY: env may be null per Zig's `orelse return`.
    let Some(env_ref) = (unsafe { env.as_ref() }) else { return };
    let this = Finalizer {
        fun,
        env: NapiEnvRef::clone_from_raw(env_ref),
        data,
        hint,
    };
    this.enqueue();
}

// ──────────────────────────────────────────────────────────────────────────
// ThreadSafeFunction
// ──────────────────────────────────────────────────────────────────────────

// TODO: generate comptime version of this instead of runtime checking
pub struct ThreadSafeFunction {
    /// thread-safe functions can be "referenced" and "unreferenced". A
    /// "referenced" thread-safe function will cause the event loop on the thread
    /// on which it is created to remain alive until the thread-safe function is
    /// destroyed. In contrast, an "unreferenced" thread-safe function will not
    /// prevent the event loop from exiting. The APIs napi_ref_threadsafe_function
    /// and napi_unref_threadsafe_function exist for this purpose.
    ///
    /// Neither does napi_unref_threadsafe_function mark the thread-safe
    /// functions as able to be destroyed nor does napi_ref_threadsafe_function
    /// prevent it from being destroyed.
    pub poll_ref: KeepAlive,

    // User implementation error can cause this number to go negative.
    pub thread_count: AtomicI64,
    // for std.condvar
    pub lock: Mutex,

    pub event_loop: &'static EventLoop,
    pub tracker: Debugger::AsyncTaskTracker,

    pub env: NapiEnvRef,
    pub finalizer_fun: napi_finalize,
    pub finalizer_data: *mut c_void,

    pub has_queued_finalizer: bool,
    pub queue: TsfnQueue,

    pub ctx: *mut c_void,
